Tweaks and improvements

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -40,9 +40,7 @@ EXPOSE 80
 
 RUN mkdir -p /var/app/current
 WORKDIR /var/app/current
-COPY src/app.js /var/app/current
-COPY src/package.json /var/app/current
-COPY src/public/ /var/app/current/
+COPY src/ /var/app/current
 RUN npm install --production
 
 
